5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1834_2604.log
== SUBMITION (2019-06-27 15:51:00) 
-- CODE:
from numpy import *
from numpy.linalg import *

pagamento = array(eval(input("pagamentos:"))

for i in range(shape(pagamento)[0]):
	for j in range(7):
		if(pagamento[i,j] == max(pagamento[i,:])):
			print(pagamento[i,j])
-- EXECUTION TIME:
0.818919
-- ERROR:
  File "/home/codebench/codes/1834/2604/main.py", line 6
    for i in range(shape(pagamento)[0]):
                                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:51:14) 
-- CODE:
from numpy import *
from numpy.linalg import *

pagamento = array(eval(input("pagamentos:"))

for i in range(shape(pagamento)[0]):
	for j in range(7):
		if(pagamento[i,j] == max(pagamento[i,:])):
			print(pagamento[i,j])
-- ERROR:
File "XXXX", line 6
    for i in range(shape(pagamento)[0]):
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:51:45) 
-- CODE:
from numpy import *
from numpy.linalg import *

pagamento = array(eval(input("pagamentos:"))

for i in range(shape(pagamento)[0]):
	for j in range(7):
		if(pagamento[i,j] == max(pagamento[i,:])):
			print(pagamento[i,j])
-- ERROR:
File "XXXX", line 6
    for i in range(shape(pagamento)[0]):
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:56:39) 
-- CODE:
from numpy import *
from numpy.linalg import *

pagamento = array(eval(input("pagamentos:"))

for i in range(shape(pagamento)[0]):
	for j in range(7):
		if(pagamento[i,j] == max(pagamento[i,:])):
			print(pagamento[i,j])
-- ERROR:
File "XXXX", line 6
    for i in range(shape(pagamento)[0]):
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:56:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

pagamento = array(eval(input("pagamentos:"))

for i in range(shape(pagamento)[0]):
	for j in range(7):
		if(pagamento[i,j] == max(pagamento[i,:])):
			print(pagamento[i,j])
-- ERROR:
File "XXXX", line 6
    for i in range(shape(pagamento)[0]):
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:59:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

pag = array(eval(input("pagamentos:"))

for i in range(shape(pag)[0]):
	for j in range(7):
		if(pag[i,j] == max(pag[i,:])):
			print(pag[i,j])
-- ERROR:
File "XXXX", line 6
    for i in range(shape(pag)[0]):
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:59:27) 
-- CODE:
from numpy import *
from numpy.linalg import *

pag = array(eval(input("pagamentos:")))

for i in range(shape(pag)[0]):
	for j in range(7):
		if(pag[i,j] == max(pag[i,:])):
			print(pag[i,j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 15:59:58) 
-- CODE:
from numpy import *
from numpy.linalg import *

pag = array(eval(input("pagamentos:")))

for i in range(shape(pag)[0]):
	for j in range(7):
		if(pag[i,j] == max(pag[i,:])):
			print(pag[i,j])
-- EXECUTION TIME:
1.25316
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:02:16) 
-- CODE:
from numpy import *
from numpy.linalg import *

pag = array(eval(input("pagamentos:")))

for i in range(shape(pag)[0]):
	#for j in range(7):
		if(pag[i,j] == max(pag[i,:])):
			print(pag[i,j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:03:05) 
-- CODE:
from numpy import *
from numpy.linalg import *

pag = array(eval(input("pagamentos:")))

for i in range(shape(pag)[0]):
	for j in range(7):
		if(pag[i,j] == max(pag[i,:])):
			print(pag[i,j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 13:09:04) 
-- CODE:
from numpy import *
from numpy.linalg import *

pag = array(eval(input("pagamentos:")))

for i in range(shape(pag)[0]):
	print (max(pag[i,j]))
-- EXECUTION TIME:
1.06067
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2604/main.py", line 7, in <module>
    print (max(pag[i,j]))
NameError: name 'j' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:09:05) 
-- CODE:
from numpy import *
from numpy.linalg import *

pag = array(eval(input("pagamentos:")))

for i in range(shape(pag)[0]):
	print (max(pag[i,j]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 13:09:17) 
-- CODE:
from numpy import *
from numpy.linalg import *

pag = array(eval(input("pagamentos:")))

for i in range(shape(pag)[0]):
	print (max(pag[:,i]))
-- EXECUTION TIME:
0.991071
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
99.9
93.1
89.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:09:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

pag = array(eval(input("pagamentos:")))

for i in range(shape(pag)[0]):
	print (max(pag[:,i]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:10:14) 
-- CODE:
from numpy import *
from numpy.linalg import *

pag = array(eval(input("pagamentos:")))

for i in range(shape(pag)[0]):
	print (max(pag[:,i]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:10:31) 
-- CODE:
from numpy import *
from numpy.linalg import *

pag = array(eval(input("pagamentos:")))

for i in range(shape(pag)[0]):
	print (max(pag[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 13:10:47) 
-- CODE:
from numpy import *
from numpy.linalg import *

pag = array(eval(input("pagamentos:")))

for i in range(shape(pag)[0]):
	print (max(pag[i,:]))
-- EXECUTION TIME:
1.20194
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
